--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
 
     <!-- Botão hamburguer -->
-    <button class="menu-toggle" aria-label="Abrir menu">☰</button>
+    <button class="menu-toggle">☰</button>
 
     <nav class="menu">
       <img src="assets/img/logo.png" alt="logo" class="logo" />
